background image still missing

--- a/Unit_3/index.html
+++ b/Unit_3/index.html
@@ -7,11 +7,23 @@
 	</head>
 
 		<body>
+			
+			<h1>Overnight Ivy Redesign</h1>
+			<h3>Little changes for big change</h3>
+			<p>Great design doesn't need to be expensive or time-consuming. Making small changes - to a room, to an object, to a space - can make a big, beautiful difference. "The beautful must ever rest in the arms of the sublime. The gentle needs the strong to sustain it, as much as the rock-flowers need rocks to grow on, or the ivy the rugged wall which it embraces." -Harriet Beecher Stowe</p> 
 
-			<img src="images/ivywall2.jpg">
-			<h1>Overnight Ivy</h1>
+			<hr>
 
-			<p>Little changes for big change</p>
+			<p>Overnight Ivy Redesign offers tips, tricks, and ideas to cover those "rugged" areas of your home and life, leaving them just a little more beautiful than they were before. </p>
 
+			<p>Here, you'll find inspiration through:</p>
+			<ul>
+				<li>DIY project tutorials</li>
+				<li>Redesign challenges</li>
+				<li>One piece, three ways</li>
+				<li>Room spotlights</li>
+				<li>Personalized advice and favorites</li>
+			</ul>
+			<a href="mailto:aijekowsky@gmail.com">Contact Me</a>
 		</body>
 	</html>
