fixed background image, changed text color

--- a/Unit_3/index.html
+++ b/Unit_3/index.html
@@ -9,7 +9,7 @@
 		<body>
 			
 			<h1>Overnight Ivy Redesign</h1>
-			<h3>Little changes for big change</h3>
+			<h3 id="slogan">Little changes for big change</h3>
 			<p>Great design doesn't need to be expensive or time-consuming. Making small changes - to a room, to an object, to a space - can make a big, beautiful difference. "The beautful must ever rest in the arms of the sublime. The gentle needs the strong to sustain it, as much as the rock-flowers need rocks to grow on, or the ivy the rugged wall which it embraces." -Harriet Beecher Stowe</p> 
 
 			<hr>
@@ -26,4 +26,15 @@
 			</ul>
 			<a href="mailto:aijekowsky@gmail.com">Contact Me</a>
 		</body>
+
+		<br>
+		<br>
+		<br>
+		First section: For the Home
+
+		Second section: For the Closet
+
+		Third section: DIY IVY
+
+		Fourth secton: One Piece, Three Ways
 	</html>
